@@ -44,6 +44,9 @@ public:
 	DCPTime full_length () const;
 
 	std::string identifier () const;
+
+	/* VideoContent */
+	void set_default_colour_conversion ();
 	
 	void set_video_length (ContentTime);
 	bool still () const;
